--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -1,24 +1,20 @@
-* {
-  box-sizing: border-box;
-}
+@charset "utf-8";
+
 .signin_container {
-  width: 768px;
-  margin: 0 auto;
-  padding: 40px 0 40px 0;
+  width: 100%;
+  margin: 40px auto;
 }
 header {
+  display: flex;
   width: 100%;
-  height: 92px;
-  padding: 20px 0 20px 0;
-  border-bottom: 1px solid #EAEDF4;
-}
-header .area_logo {
-  display: inline-block;
-  padding: 0 0 0 120px;
+  height: 72px;
+  padding: 20px 0 20px 10%;
+  border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+  align-items: center;
 }
 header .area_logo .logo {
   display: flex;
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   color: #333333;
   align-items: center;
   text-align: center;
@@ -26,27 +22,24 @@ header .area_logo .logo {
 header .area_logo .logo span:nth-child(1) {
   color: #0038C9;
   font-weight: 700;
-  font-size: 2.8rem;
 }
 header .area_logo .logo span:nth-child(2) {
   color: #FFCC00;
   font-weight: 700;
-  font-size: 2.8rem;
 }
 .signup {
-  width: 505.8px;
+  width: 80%;
   margin: 0 auto;
-  position: relative;
+  margin-top: 50px;
 }
 form input {
   box-sizing: border-box;
   width: 100%;
-  padding: 10px 12px 14px 12px;
+  padding: 13px 12px;
   height: 48px;
-  margin: 0;
   font-size: 1.6rem;
   line-height: 24px;
-  border: 1px solid #8491A7;
+  border: 1px solid rgba(0, 13, 255, 0.5);
   border-radius: 4px;
   color: #373F57;
   letter-spacing: -1px;
@@ -58,29 +51,20 @@ form input:focus {
   border: #2D65FE;
 }
 form .item {
-  margin-top: 24px;
-  position: relative;
+  margin-top: 30px;
 }
 form .item label {
-  font-size: 2.4rem;
-  line-height: 27px;
+  display: flex;
+  font-size: 1.8rem;
   color: #333333;
   margin-bottom: 8px;
-  display: flex;
 }
-/* form .item label strong {
-  font-size: 2.4rem;
-  line-height: 1.0;
-  color: #373F57;
-  margin-bottom: 8px;
-  display: inline-block;
-} */
 form .item:nth-child(4) div {
   display: flex;
   gap: 20px;
 }
 form .item:nth-child(4) button {
-  width: 20%;
+  width: 40%;
   cursor: pointer;
   background-color: rgba(51, 51, 51, 0.5);
   border: 1px solid rgba(51, 51, 51, 0.5);
@@ -93,106 +77,74 @@ form .checkmsg {
   color: red;
 }
 .join_agree {
-  position: relative;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 60px;
+  margin-top: 40px;
   width: 100%;
-  height: 330px;
+  padding: 30px 20px;
   border: 1px solid rgba(51, 51, 51, 0.5);
   border-radius: 12px;
 }
-.join_input {
-  position: absolute;
+.join_input_all {
   display: flex;
   align-items: center;
   text-align: center;
-  width: 93%;
-  top: 30px;
-  left: 20px;
-  gap: 8px;
+  width: 100%;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(51, 51, 51, 0.5);
 }
+.join_input_all input {
+  width: 25px;
+  height: 25px;
+  background: #FAFAFA;
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  border-radius: 4px;
+}
+.join_input_all label {
+  font-size: 1.8rem;
+  color: #333333;
+  font-weight: 700;
+  line-height: 27px;
+  margin-left: 8px;
+}
+.join_input {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
 .join_input input {
-  box-sizing: border-box;
-  width: 33px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   background: #FAFAFA;
   border: 1px solid rgba(51, 51, 51, 0.5);
   border-radius: 4px;
 }
 .join_input label {
-  display: flex;
-  align-items: center;
-  font-size: 2.4rem;
+  font-size: 1.4rem;
   color: #333333;
   font-weight: 700;
-  line-height: 27px;
+  margin-left: 8px;
 }
 .material-symbols-outlined {
+  font-size: 1.6rem;
   position: absolute;
-  right: 20px;
+  right: 0px;
   color: rgba(51, 51, 51, 0.5);
   cursor: pointer;
 }
-.join_input2 {
-  /* position: absolute; */
-  top: 110px;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.join_input2 input {
-  width: 33px;
-  height: 40px;
-  background-color: #FAFAFA;
-  border: 1px solid rgba(51, 51, 51, 0.5);
-  border-radius: 4px;
-}
 .join_input2 label {
-  height: 22px;
-  display: flex;
-  align-items: center;
-  font-size: 2.0rem;
-  font-weight: 700;
-}
-.join_input3 {
-  top: 160px;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.join_input3 label {
-  font-weight: 700;
-  font-size: 2.0rem;
-}
-.join_input4 {
-  top: 210px;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.join_input4 label {
   font-weight: 400;
-  font-size: 2.0rem;
+  font-size: 1.2rem;
 }
-.join_input5 {
-  top: 260px;
-  border-bottom: none;
-  padding-bottom: 0;
-}
-.join_input5 label {
-  font-size: 20px;
-  font-weight: 400;
-}
-
 .join_radio {
-  margin: 60px 0;
+  margin: 40px 0;
 }
 .join_radio div {
-  font-size: 2.4rem;
-  margin-bottom: 24px;
-  font-weight: 400;
-  line-height: 27px;
+  font-size: 1.8rem;
+  margin-bottom: 10px;
 }
 .join_radio ul {
   display: flex;
@@ -203,25 +155,21 @@ form .checkmsg {
   margin-right: 20px;
 }
 .join_radio ul li input {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background-color: #FAFAFA;
   border: 1px solid rgba(51, 51, 51, 0.5);
   margin-right: 8px;
 }
 .join_radio ul li label {
   text-align: center;
-  font-size: 2.0rem;
-}
-
-.btn_signup {
-  margin-top: 24px;
+  font-size: 1.6rem;
 }
 .btn_signup button {
   width: 100%;
   height: 65px;
   box-sizing: border-box;
-  padding: 19px 28px 19px 28px;
+  padding: 19px 28px;
   font-size: 2.4rem;
   line-height: 24px;
   border: 1px solid #4876EF;
@@ -233,4 +181,78 @@ form .checkmsg {
   background-color: rgba(51, 51, 51, 0.5);
   overflow: visible;
   cursor: pointer;
+}
+
+/* 테블릿 768 사이즈 반응형 */
+@media screen and (min-width: 768px) {
+  header {
+    padding: 20px 0px 20px 120px;
+  }
+  header .area_logo .logo {
+    font-size: 2.8rem;
+  }
+  .signup {
+    width: 510px;
+    margin-top: 70px;
+  }
+  form input {
+    height: 60px;
+    font-size: 2.2rem;
+  }
+  form .item label {
+    font-size: 2.4rem;
+  }
+  form .item:nth-child(4) button {
+    width: 120px;
+  }
+  form .checkmsg {
+    font-size: 2.0rem;
+  }
+  .join_agree {
+    margin-top: 60px;
+  }
+  .join_input_all input {
+    width: 40px;
+    height: 40px;
+  }
+  .join_input_all label {
+    font-size: 2.4rem;
+    margin-left: 10px;
+  }
+  .join_input input {
+    width: 40px;
+    height: 40px;
+  }
+  .join_input label {
+    font-size: 2.0rem;
+    margin-left: 10px;
+  }
+  .material-symbols-outlined {
+    font-size: 2.4rem;
+  }
+  .join_radio {
+    margin: 60px 0;
+  }
+  .join_radio div {
+    font-size: 2.4rem;
+    margin-bottom: 24px;
+  }
+  .join_radio ul li input {
+    width: 30px;
+    height: 30px;
+  }
+  .join_radio ul li label {
+    font-size: 2.0rem;
+  }
+}
+
+/* PC 1024 사이즈 반응형 */
+@media screen and (min-width: 1024px) {
+  form input {
+    font-size: 2.4rem;
+  }
+  .join_input label {
+    font-size: 2.0rem;
+    margin-left: 10px;
+  }
 }
