--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -318,7 +318,6 @@ main{
 	z-index: 9;
 }
 .contents_wrap {
-	display: flex;
 	width: 78.7%;
 	margin: 0 auto;
 	margin-top: 40px;
@@ -342,7 +341,7 @@ main{
 .total_score_wrap {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: left;
 	flex-wrap: wrap !important;
 	gap: 40px;
 	margin: 0 auto;
@@ -386,6 +385,7 @@ main{
 .total_score_wrap ul {
 	flex-basis: calc(100% - 206px);
 	display: flex;
+	max-width: 470px;
 	flex-direction: row;
 	flex-wrap: wrap;
 	gap: 16px;
@@ -457,7 +457,6 @@ main{
 	cursor: pointer;
 }
 .star_detail {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -684,6 +683,9 @@ main{
 		width: 126px;
 		height: 26px;
 	}
+	.star_detail {
+		position: absolute;
+	}
 	.review_comment {
 		margin-top: 0px;
 	}
@@ -758,6 +760,7 @@ main{
 	}
 	.total_score_wrap ul {
 		column-gap: 160px;
+		max-width: 600px;
 	}
 	.total_score_main p:nth-of-type(1) {
 		font-size: 2.8rem;
@@ -789,6 +792,7 @@ main{
 	}
 	.sidebar {
 		display: block;
+		float: right;
 		width: 30%;
 		overflow: hidden;
 		height: auto;
