--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -309,10 +309,22 @@ main{
 	width: 60px;
 	height: 60px;
 	right: 10%;
-	bottom: 10%;
+	bottom: 15%;
 	background: url(./images/btn_write_modal.png) no-repeat center;
 	background-size: 50%;
 	background-color: #3d47FF;
+	border-radius: 60px;
+	cursor:pointer;
+	z-index: 9;
+}
+.btn_toTop {
+	position: fixed;
+	width: 40px;
+	height: 40px;
+	right: calc(10% + 10px);
+	bottom: 7%;
+	background: url(./images/toTop_gray.png) no-repeat center;
+	background-size: 100%;
 	border-radius: 60px;
 	cursor:pointer;
 	z-index: 9;
@@ -374,7 +386,6 @@ main{
 	width: 100%;
 	height: 100%;
 	background-size:cover;
-
 }
 .total_score_main p:nth-of-type(2) {
 	font-weight: 400;
@@ -636,6 +647,9 @@ main{
 	.btn_write {
 		width: 80px;
 		height: 80px;
+	}
+	.btn_toTop {
+		right: calc(10% + 20px);
 	}
 	.contents_wrap {
 		width: 86%;
