--- a/public/styles/style_header.css
+++ b/public/styles/style_header.css
@@ -1,15 +1,25 @@
 @charset "utf-8";
 
+/* mobile */
+/* z-index (.modal : 10) (.nav_wrap : 11) */
 .container{
   width:100%;height:100px;
 }
-
+.modal{
+  position:fixed;
+  top:0;left:0;
+  width:100%;height:100%;
+  background-color:#fff;
+  display:none;
+  z-index: 10;
+}
 header{
   width:90%;
   height:100%;
   margin:60px auto 32px;
   display:flex;
   justify-content: space-between;
+  line-height:1.6;
 }
 
 h1{
@@ -23,12 +33,18 @@ h1>a{
   background: url(images/logo_NeedU.png) no-repeat center/contain;
 }
 
-nav{
-  
+.nav_wrap{
+  z-index: 11;
 }
+nav{
+  display:none;
+  width:100%;
+}
+
 .btn_ham_gnb{
   width: 32px;
   height: auto;
+  cursor:pointer;
 }
 .btn_ham_gnb span{
   display:block;
@@ -38,6 +54,101 @@ nav{
   background-color:#000;
   border-radius:4px;
 }
+.gnb_wrap{
+  margin-top:60px;
+  width:100%;
+}
+.gnb_search{
+  width:100%;
+}
+.gnb_search>form{
+  padding-bottom:8px;
+  border-bottom:1px solid #000dff;
+  display:flex;
+  justify-content: space-between;
+}
 input{
   border:none;
+  outline: none;
+}
+.search_text{
+  font-size:1.6rem;
+}
+.search_text::placeholder{
+  color:rgba(0,0,0,0.3)
+}
+.btn_search{
+  width:21px;
+  height:21px;
+  background:url(images/btn_search.png) no-repeat center/contain;
+  cursor: pointer;
+}
+
+.gnb li{
+  margin-bottom:60px;
+  margin-top:60px;
+  font-size:1.8rem;
+}
+.usersign{
+  margin-top:80px; /* 중첩돼서 80px로 구현됨 */
+  display:flex;
+  font-size:1.8rem;
+}
+.usersign a{
+  display:block;
+  margin-right:60px;
+}
+
+/* mobile-end */
+
+@media screen and (min-width:768px) {
+
+header{}
+h1{}
+.nav_wrap{
+  width:100%;
+}
+.btn_ham_gnb{
+  display:none;
+}
+nav{
+  display:block !important;
+  display:flex !important;
+  justify-content: space-between !important;
+}
+.gnb_wrap{
+  margin:0;
+  width:65%;
+  display:flex;
+  justify-content: space-between;
+  flex-flow: row-reverse;
+}
+.gnb_search{
+  width:fit-content;
+}
+.gnb_search>form{
+  border:none;
+}
+.search_text{
+  display:none;
+} /* 검색 텍스트 영역 */
+.btn_search{
+
+} /* 검색 버튼 영역 */
+.gnb{
+  display:flex;
+} /* ul */
+.gnb li{
+  margin:0;
+  margin-left:40px;
+}
+.usersign{
+  margin:0;
+}
+.usersign a{
+  margin:0;
+}
+.usersign a:first-child{
+  margin-right:40px;
+}
 }
