별 svg 사이즈 수정

--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -268,7 +268,7 @@ main{
 	gap: 6px;
 }
 .corp_info_data div>div:nth-child(1) {
-	width: 86px;
+	width: 90px;
 	height: 18px;
 }
 .corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
@@ -372,17 +372,17 @@ main{
 	line-height: 20px;
 }
 .total_score_main div:nth-of-type(1) {
-	width: 136px;
+	width: 140px;
 	height:28px;
 }
 .star_bg {
 	position: relative;
-	background: url(./images/star_bg.png) no-repeat;
+	background: url(./images/star_bg.svg) no-repeat;
 	background-size: contain;
 }
 .star_bg span{
 	position: absolute;
-	background: url(./images/star_selected.png) no-repeat;
+	background: url(./images/star_selected.svg) no-repeat;
 	width: 100%;
 	height: 100%;
 	background-size:cover;
@@ -457,7 +457,7 @@ main{
 	gap: 8px;
 }
 .btn_star_detail>div:nth-of-type(1) {
-	width: 96px;
+	width: 100px;
 	height: 20px;
 }
 .btn_star_detail>button:nth-of-type(1) {
@@ -486,7 +486,7 @@ main{
 	height: 16px;
 }
 .star_detail>div>div{
-	width: 76px;
+	width: 80px;
 	height: 16px;
 }
 .star_detail>div>p {
@@ -630,7 +630,7 @@ main{
 		font-size: 2.8rem;
 	}
 	.corp_info_data div>div:nth-child(1) {
-		width: 116px;
+		width: 120px;
 		height: 24px;
 	}
 	.corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
@@ -667,7 +667,7 @@ main{
 		font-size: 2.2rem;
 	}
 	.total_score_main div:nth-of-type(1) {
-		width: 171px;
+		width: 175px;
 		height:35px;
 	}
 	.total_score_main p:nth-of-type(2) {
@@ -694,7 +694,7 @@ main{
 		font-size: 2.0rem;
 	}
 	.btn_star_detail>div:nth-of-type(1) {
-		width: 126px;
+		width: 130px;
 		height: 26px;
 	}
 	.star_detail {
@@ -812,7 +812,6 @@ main{
 		height: auto;
 		padding: 40px 42px;
 		margin: 0;
-		margin-left: 21px;
 		background-color: rgba(0,0,0,0.03);
 		border-radius: 5px;
 	}
