--- a/public/styles/review_write.css
+++ b/public/styles/review_write.css
@@ -102,7 +102,7 @@ main{
 	gap: 6px;
 }
 .corp_info_data div>div:nth-child(1) {
-	width: 86px;
+	width: 90px;
 	height: 18px;
 }
 .corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
@@ -117,12 +117,12 @@ main{
 }
 .star_bg {
 	position: relative;
-	background: url(./images/star_bg.png) no-repeat;
+	background: url(./images/star_bg.svg) no-repeat;
 	background-size: contain;
 }
 .star_bg span{
 	position: absolute;
-	background: url(./images/star_selected.png) no-repeat;
+	background: url(./images/star_selected.svg) no-repeat;
 	width: 100%;
 	height: 100%;
 	background-size:cover;
@@ -177,8 +177,8 @@ main{
 	gap: 10px;
 }
 .item div {
-	width: 160px;
-	height: 33px;
+	width: 150px;
+	height: 30px;
 }
 .star_bg input {
   position: absolute;
