--- a/public/styles/review_write.css
+++ b/public/styles/review_write.css
@@ -138,10 +138,30 @@ main{
 	width: 100%;
 	height: 44px;
 }
-.contents {
+.btn_toTop {
+	position: fixed;
+	width: 40px;
+	height: 40px;
+	right: calc(10% + 10px);
+	bottom: 7%;
+	background: url(./images/toTop_gray.png) no-repeat center;
+	background-size: 100%;
+	border-radius: 60px;
+	cursor:pointer;
+	z-index: 9;
+}
+.contents_wrap {
 	width: 78.7%;
 	margin: 0 auto;
 	margin-top: 40px;
+}
+.contents {
+	width: 100%;
+	margin: 0 auto;
+	margin-top: 40px;
+}
+.contents>p {
+	font-size: 1.4rem;
 }
 .review_form {
 	display: flex;
@@ -158,13 +178,14 @@ main{
 .check_score {
 	display: flex;
 	flex-direction: column;
-
 }
 .check_score>p {
+	font-size: 1.4rem;
 	font-weight: 700;
 }
 .check_score label {
 	width: 100px;
+	font-size: 1.4rem;
 	font-weight: 700;
 }
 .item {
@@ -195,38 +216,91 @@ main{
 	margin-top: 40px;
 	gap: 10px;
 }
-.hashtag label {
-	display: inline-block;
+.hashtag>div:nth-of-type(1) {
 	width: 100px;
+	font-size: 1.4rem;
+	font-weight: 700;
 }
-.hashtag div {
+.hashtag>div:nth-of-type(2) {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	gap: 10px	;
 }
-.hashtag button {
-	height: 26px;
+.hashtag span {
 	padding: 4px 8px;
 	border: 1px solid #aaaaaa;
 	border-radius: 12px;
+	font-size: 1.3rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.write_review {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+}
+.write_item {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+.write_item label {
+	width: 100px;
+	font-weight: 700;
+	font-size: 1.4rem;
+}
+.write_item>div {
+	width: 100%;
+}
+.write_item>div>span {
+	float: right;
+	font-size: 1.3rem;
+	color: #aaaaaa;
+}
+.write_item textarea {
+	width: 100%;
+	min-height: 160px;
+	padding: 17px 10px;
+	background: #ffffff;
+	border: 1px solid #aaaaaa;
+	border-radius: 5px;
+	font-size: 1.3rem;
+	line-height: 140%;
+	color: #000;
+}
+.write_item textarea::placeholder {
+	font-size: 1.3rem;
+	color: #aaaaaa;
+	white-space: normal;
+}
+.write_item:nth-of-type(1)>div {
+	margin-top: 10px;
+}
+.write_item:nth-of-type(1)>textarea {
+	min-height: 54px;
+}
+.contents>button {
+	display: block;
+	width: 200px;
+	height: 60px;
+	background-color: #000dff;
+	border-radius: 5px;
+	margin: 0 auto;
+	margin-top: 40px;
+	font-size: 1.8rem;
+	font-weight: 700;
+	color: #ffffff;
+}
+footer {
+	width: 100%;
+	margin: 80px auto;
+}
+footer>div {
+	width: 78.7%;
+	margin: 0 auto;
+}
+.sidebar {
+	display: none;
+}
 
 /* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
@@ -259,7 +333,7 @@ main{
 		font-size: 2.8rem;
 	}
 	.corp_info_data div>div:nth-child(1) {
-		width: 116px;
+		width: 120px;
 		height: 24px;
 	}
 	.corp_info_data>div:nth-of-type(2)>span:nth-of-type(1){
@@ -268,17 +342,80 @@ main{
 	.corp_info_data>div:nth-of-type(2)>span:nth-of-type(2){
 		font-size: 1.6rem;
 	}
-
-
-
-
-
+	.btn_toTop {
+		right: calc(10% + 20px);
+	}
+	.contents_wrap {
+		width: 86%;
+	}
+	.contents>p {
+		font-size: 1.8rem;
+	}
+	.review_form {
+		padding: 60px 40px;
+		gap: 80px;
+	}
+	.review_form>p:nth-of-type(1) {
+		font-size: 2.4rem;
+	}
+	.check_score>p {
+		font-size: 1.8rem;
+	}
+	.check_score label {
+		width: 125px;
+		font-size: 1.8rem;
+	}
+	.item {
+		max-width: 520px;
+	}
+	.item div {
+		width: 300px;
+		height: 60px;
+	}
 	.hashtag {
-		flex-direction: row;
-		justify-content: space-between;
 		flex-wrap: nowrap;
-		margin-top: 40px;
-		gap: 10px;
+	}
+	.hashtag>div:nth-of-type(1) {
+		width: 125px;
+		font-size: 1.8rem;
+	}
+	.hashtag>div:nth-of-type(2) {
+		flex-basis: calc(100% - 200px);
+	}
+	.hashtag span {
+		font-size: 1.8rem;
+	}
+	.write_item {
+		flex-wrap: nowrap;
+	}
+	.write_item label {
+		width: 120px;
+		font-size: 1.8rem;
+	}
+	.write_item>div {
+		position: relative;
+		width: calc(100% - 200px);
+		max-width: 500px;
+		left: 80px;
+	}
+	.write_item span {
+		font-size: 1.4rem;
+	}
+	.write_item textarea {
+		padding: 17px 20px;
+		font-size: 1.8rem;
+	}
+	.write_item textarea::placeholder {
+		font-size: 1.8rem;
+	}
+	.write_item:nth-of-type(1)>div {
+		margin-top: 0px;
+	}
+	.contents>button {
+		margin-right: 0;
+	}
+	footer>div {
+		width: 86%;
 	}
 }
 
@@ -295,10 +432,41 @@ main{
 	.corp_info {
 		width: 66.667%;
 	}
+	.contents_wrap {
+		width: 86%;
+	}
 	.corp_info_data>div>span:nth-child(1) {
 		font-size: 3.2rem;
 	}
 	.corp_info_data>div>span:nth-child(2) {
 		font-size: 1.6rem;
+	}
+	.contents_wrap {
+		width: 66.667%;
+	}
+	.contents {
+		float: left;
+		width: 78.5%;
+	}
+	.contents>p {
+		height: 25px;
+	}
+	.sidebar {
+		display: block;
+		float: right;
+		width: 20%;
+		overflow: hidden;
+		height: auto;
+		margin: 0;
+		margin-top: 85px;
+	}
+	.sidebar>div {
+		height: 300px;
+		background-color: rgba(0,0,0,0.03);
+		border-radius: 5px;
+		margin-bottom: 40px;
+	}
+	footer>div {
+		width: 66.667%;
 	}
 }
