--- a/public/styles/review_write.css
+++ b/public/styles/review_write.css
@@ -258,7 +258,7 @@ main{
 }
 .write_item textarea {
 	width: 100%;
-	min-height: 160px;
+	height: 160px;
 	padding: 17px 10px;
 	background: #ffffff;
 	border: 1px solid #aaaaaa;
@@ -275,20 +275,20 @@ main{
 .write_item:nth-of-type(1)>div {
 	margin-top: 10px;
 }
-.write_item:nth-of-type(1)>textarea {
-	min-height: 54px;
+.write_item:nth-of-type(1)>div>textarea {
+	height: 54px;
 }
 .contents>button {
 	display: block;
 	width: 200px;
 	height: 60px;
-	background-color: #000dff;
+  background-color: rgba(51, 51, 51, 0.5);
 	border-radius: 5px;
 	margin: 0 auto;
 	margin-top: 40px;
 	font-size: 1.8rem;
 	font-weight: 700;
-	color: #ffffff;
+  color: #333333;
 }
 footer {
 	width: 100%;
