--- a/public/styles/review_write.css
+++ b/public/styles/review_write.css
@@ -200,13 +200,16 @@ main{
 	border: 1px solid #aaaaaa;
 	border-radius: 5px;
 }
+.period>div>div>div>div {
+	width: 60px;
+}
 .period>div>div>div>div input {
 	width: 20px;
 }
 .period>div label {
 	font-weight: 400;
 }
-.period>div>div:nth-of-type(2)>div {
+.period>div>div>div {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -412,17 +415,27 @@ footer>div {
 		gap: 80px;
 	}
 	.working_info label {
-		width: 125px;
+		width: 100px;
 		font-size: 1.8rem;
 	}
 	.period>div>div {
 		width: 200px;
 	}
 	.period>div>div>input {
-		height: 30px;
+		height: 40px;
+		font-size: 1.6rem;
+	}
+	.period>div>div>div>div {
+		width: 100px;
+	}
+	.period>div>div>div>div input {
+		width: 30px;
+		height: 15px;
 	}
 	.working_info select {
 		width: 400px;
+		height: 40px;
+		font-size: 1.8rem;
 	}
 	.review_form>p:nth-of-type(1) {
 		font-size: 2.4rem;
