--- a/public/styles/style_header.css
+++ b/public/styles/style_header.css
@@ -23,18 +23,19 @@ header{
 }
 
 h1{
-  width:100px;
+  width:105px;
   height:28px;
 }
 h1>a{
   display:block;
   width:100%;
   height:100%;
-  background: url(images/logo_NeedU.png) no-repeat center/contain;
+  background: url(images/logo_NeedU.png) no-repeat center/95%;
 }
 
 .nav_wrap{
   z-index: 11;
+  position:relative;
 }
 nav{
   display:none;
@@ -42,10 +43,12 @@ nav{
 }
 
 .btn_ham_gnb{
+  position:absolute;
+  top:0; right:0;
   width: 32px;
-  height: auto;
   cursor:pointer;
 }
+
 .btn_ham_gnb span{
   display:block;
   width:100%;
@@ -89,6 +92,19 @@ input{
   margin-top:60px;
   font-size:1.8rem;
 }
+.gnb li a{
+  display:block;
+  width:100%;
+  height:fit-content;
+  line-height:1.8;
+}
+.gnb li a::after{
+  content:"";
+  display:inline-block;
+  width:7px; height:14px;
+  margin-left:12px;
+  background:url(images/ico_arrow_R.png) no-repeat bottom/contain;
+}
 .usersign{
   margin-top:80px; /* 중첩돼서 80px로 구현됨 */
   display:flex;
@@ -97,14 +113,28 @@ input{
 .usersign a{
   display:block;
   margin-right:60px;
+  line-height:1.8;
 }
-
+.usersign a:nth-of-type(1)::before{
+  content:"";
+  display:inline-block;
+  transform:translateY(4px);
+  width:18px; height:18px;
+  margin-right:8px;
+  background:url(images/ico_login.png) no-repeat center/contain;
+}
+.usersign a:nth-of-type(2)::before{
+  content:"";
+  display:inline-block;
+  transform:translateY(4px);
+  width:18px; height:18px;
+  margin-right:8px;
+  background:url(images/ico_signup.png) no-repeat center/contain;
+}
 /* mobile-end */
 
 @media screen and (min-width:768px) {
 
-header{}
-h1{}
 .nav_wrap{
   width:100%;
 }
@@ -118,29 +148,26 @@ nav{
 }
 .gnb_wrap{
   margin:0;
-  width:65%;
+  width:70%;
   display:flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-flow: row-reverse;
 }
 .gnb_search{
+  margin-top:4px;
   width:fit-content;
+  height:28px;
 }
-.gnb_search>form{
-  border:none;
-}
-.search_text{
-  display:none;
-} /* 검색 텍스트 영역 */
-.btn_search{
-
-} /* 검색 버튼 영역 */
 .gnb{
   display:flex;
+  min-width:fit-content;
 } /* ul */
 .gnb li{
   margin:0;
   margin-left:40px;
+}
+.gnb li a::after{
+  display:none;
 }
 .usersign{
   margin:0;
@@ -148,7 +175,28 @@ nav{
 .usersign a{
   margin:0;
 }
+.usersign a:nth-of-type(1)::before{
+  display:none;
+}
+.usersign a:nth-of-type(2)::before{
+  display:none;
+}
 .usersign a:first-child{
   margin-right:40px;
+}
+}
+/* 768 end */
+/* 1024 */
+@media screen and (min-width:1024px) {
+.container{
+  padding:0 7.03%;
+}
+
+.gnb_wrap{
+  width:75%;
+  /* border:1px solid red; */
+}
+.gnb_search{
+  width:36%;
 }
 }
