--- a/public/styles/style_header.css
+++ b/public/styles/style_header.css
@@ -2,9 +2,7 @@
 
 /* mobile */
 /* z-index (.modal : 10) (.nav_wrap : 11) */
-.container{
-  width:100%;height:100px;
-}
+
 .modal{
   position:fixed;
   top:0;left:0;
@@ -14,14 +12,14 @@
   z-index: 10;
 }
 header{
-  width:80%;
-  height:100%;
-  margin:60px auto 32px;
   display:flex;
   justify-content: space-between;
+  width:80%;
+  height: 28px;;
+  margin:0 auto;
+  margin-top: 60px;
   line-height:1.6;
 }
-
 h1{
   width:105px;
   height:28px;
@@ -32,7 +30,6 @@ h1>a{
   height:100%;
   background: url(images/logo_NeedU.png) no-repeat center/95%;
 }
-
 .nav_wrap{
   z-index: 11;
   position:relative;
@@ -41,14 +38,12 @@ nav{
   display:none;
   width:100%;
 }
-
 .btn_ham_gnb{
   position:absolute;
   top:0; right:0;
   width: 32px;
   cursor:pointer;
 }
-
 .btn_ham_gnb span{
   display:block;
   width:100%;
@@ -138,7 +133,6 @@ input{
 header{
   width:86%;
 }
-
 .nav_wrap{
   width:100%;
 }
@@ -192,12 +186,6 @@ nav{
 /* 768 end */
 /* 1024 */
 @media screen and (min-width:1024px) {
-.container{
-  padding:0 7.03%;
-}
-header{
-  width:100%;
-}
 .gnb_wrap{
   width:75%;
   /* border:1px solid red; */
@@ -206,10 +194,8 @@ header{
   width:36%;
 }
 }
-
 @media screen and (min-width:1280px){
-  .container{
-    width:1280px;
-    margin:0 auto;
+  header{
+    width:67%;
   }
 }
