--- a/public/styles/style_header.css
+++ b/public/styles/style_header.css
@@ -2,7 +2,14 @@
 
 /* mobile */
 /* z-index (.modal : 10) (.nav_wrap : 11) */
-
+#header_wrap{
+  position: fixed;
+  right: 0;left: 0;
+  width:100%;
+  height: 120px;;
+  z-index: 9;
+  background: #f5f5f5;
+}
 .modal{
   position:fixed;
   top:0;left:0;
@@ -12,12 +19,12 @@
   z-index: 10;
 }
 header{
+  width: 80%;
   display:flex;
   justify-content: space-between;
-  width:80%;
-  height: 28px;;
   margin:0 auto;
   margin-top: 60px;
+  height: 28px;;
   line-height:1.6;
 }
 h1{
@@ -70,7 +77,9 @@ input{
   outline: none;
 }
 .search_text{
+  width: calc(100% - 25px);
   font-size:1.6rem;
+  background: none;
 }
 .search_text::placeholder{
   color:rgba(0,0,0,0.3)
@@ -129,7 +138,6 @@ input{
 /* mobile-end */
 
 @media screen and (min-width:768px) {
-
 header{
   width:86%;
 }
@@ -195,7 +203,7 @@ nav{
 }
 }
 @media screen and (min-width:1280px){
-  header{
-    width:67%;
-  }
+header{
+  width:67%;
+}
 }
