--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -62,6 +62,7 @@ nav{
 .gnb_wrap{
   margin-top:60px;
   width:100%;
+  margin-right:60px;
 }
 .gnb_search{
   width:100%;
@@ -113,13 +114,13 @@ input{
   margin-top:80px; /* 중첩돼서 80px로 구현됨 */
   display:flex;
   font-size:1.8rem;
+  justify-content: space-between;
 }
 .usersign a{
   display:block;
-  margin-right:60px;
   line-height:1.8;
 }
-.usersign a:nth-of-type(1)::before{
+.login::before{
   content:"";
   display:inline-block;
   transform:translateY(4px);
@@ -127,7 +128,7 @@ input{
   margin-right:8px;
   background:url(images/ico_login.png) no-repeat center/contain;
 }
-.usersign a:nth-of-type(2)::before{
+.signup::before{
   content:"";
   display:inline-block;
   transform:translateY(4px);
@@ -135,11 +136,33 @@ input{
   margin-right:8px;
   background:url(images/ico_signup.png) no-repeat center/contain;
 }
+.nickname{
+  display: inline-block !important;
+  width: calc(100% - 100px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.nickname::before{
+  content:"";
+  display:inline-block;
+  transform:translateY(4px);
+  width:18px; height:18px;
+  margin-right:8px;
+  background:url(images/ico_login.png) no-repeat center/contain;
+}
+.logout::before{
+  content:"";
+  display:inline-block;
+  transform:translateY(4px);
+  width:18px; height:18px;
+  margin-right:8px;
+  background:url(images/ico_logout.png) no-repeat center/contain;
+}
 footer{
   width: 80%;
   margin: 0 auto;
 }
-
 .btn_toTop {
 	position: fixed;
 	width: 40px;
@@ -152,7 +175,6 @@ footer{
 	cursor:pointer;
 	z-index: 9;
 }
-
 
 
 /* mobile-end */
@@ -174,6 +196,7 @@ nav{
 }
 .gnb_wrap{
   margin:0;
+  margin-right: 20px;
   width:70%;
   display:flex;
   justify-content: space-around;
@@ -181,7 +204,9 @@ nav{
 }
 .gnb_search{
   margin-top:4px;
+  margin-left: 20px;
   width:fit-content;
+  min-width: 180px;
   height:28px;
 }
 .gnb{
@@ -197,20 +222,34 @@ nav{
 }
 .usersign{
   margin:0;
+  margin-left: 20px;
+  width: 25%;
+  justify-content: space-around;
 }
 .usersign a{
   margin:0;
 }
-.usersign a:nth-of-type(1)::before{
+.login::before{
   display:none;
 }
-.usersign a:nth-of-type(2)::before{
+.signup::before{
   display:none;
+}
+.nickname::before{
+  display:none;
+}
+.nickname{
+  width: auto;
+}
+.logout{
+  display: inline-block !important;
+}
+.logout span{
+  display: none;
 }
 .usersign a:first-child{
-  margin-right:40px;
+  margin-right:20px;
 }
-
 
 footer{
   width:86%;
@@ -230,12 +269,24 @@ footer{
 .gnb_search{
   width:36%;
 }
+.logout::before{
+  display:none;
+}
+.logout{
+  min-width: 66px;
+}
+.logout span{
+  display: block;
+  width: auto;
+}
 }
 @media screen and (min-width:1280px){
 header{
   width:67%;
 }
-
+.usersign{
+  width: 20%;
+}
 
 footer{
   width:67%;
