--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -2,7 +2,7 @@
 /* z-index: modal 11, header10; button9 */
 
 .container{
-	width:100%;height:100%;
+	width:100%;
 	background-color: #fafafa;
 	overflow:auto;
 }
