--- a/public/styles/review_write_search.css
+++ b/public/styles/review_write_search.css
@@ -146,7 +146,8 @@
 }
 @media screen and (min-width:1280px){
   .search{
-    width: 1000px;
+    width: 67%;
+    max-width: 1000px;
   }
   #search_input{
     font-size: 2.4rem;
