--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -160,8 +160,42 @@ input{
   background:url(images/ico_logout.png) no-repeat center/contain;
 }
 footer{
+  position: absolute;
+  width: 100%;
+  font-size: 1.2rem;
+}
+footer-component{
+  display: flex;
   width: 80%;
-  margin: 0 auto;
+  margin: 30px auto;
+  flex-direction: column;
+}
+.footer_main{
+  display: flex;
+  align-items: end;
+  height: auto;
+  padding: 20px 0 ;
+  gap: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(0, 13, 255, 0.1);
+}
+.logo{
+  width: 70px;
+  height: 20px;
+  background: url(images/logo_NeedU.png) no-repeat center/95%;;
+}
+.footer_data{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.footer_data>span{
+  line-height: 20px;
+}
+.footer_data>span:not(:last-child)::after{
+  content: '|';
+  margin-left: 5px;
+  margin-right: 5px;
 }
 .btn_toTop {
 	position: fixed;
@@ -251,7 +285,7 @@ nav{
   margin-right:20px;
 }
 
-footer{
+footer-component{
   width:86%;
 }
 
@@ -288,7 +322,7 @@ header{
   width: 20%;
 }
 
-footer{
+footer-component{
   width:67%;
 }
 }
