모달 완료, 기관주소 db 수정

--- a/public/styles/review_write.css
+++ b/public/styles/review_write.css
@@ -287,6 +287,7 @@ main{
 	font-size: 1.3rem;
 	line-height: 140%;
 	color: #000;
+	resize: none;
 }
 .write_item textarea::placeholder {
 	font-size: 1.3rem;
