--- a/public/styles/review_write_search.css
+++ b/public/styles/review_write_search.css
@@ -145,6 +145,10 @@
   padding: 5px 10px;
   border: 1px solid #aaaaaa;
   border-radius: 5px;
+  font-size: 1.0rem;
+  appearance: none;
+  background: url(images/btn_select.png) no-repeat right 12px center;
+  background-size: 12px 9px;
 }
 .btn_modalSubmit{
   display: flex;
