--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -606,7 +606,7 @@ main{
 		font-size: 2.0rem;
 	}
 	.sidebar>input {
-		width: 300px;
+		width: 100%;
 		height: 38px;
 		margin-top: 20px;
 		border-bottom: 1px solid #aaaaaa;		
@@ -640,6 +640,9 @@ main{
 		color: #aaaaaa;
 	}
 	.side_contents>ul>li>div:nth-of-type(2) {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 		padding: 10px 20px;
 		overflow: hidden;
 		width: 100%;
@@ -656,16 +659,20 @@ main{
 		font-size: 1.6rem;
 		word-wrap: break-word;
 	}
-	.side_contents>ul>li>div:nth-of-type(2)>p:nth-of-type(2) {
+	.side_contents>ul>li>div:nth-of-type(2)>div {
+		float: inline-end;
+	}
+	.side_contents>ul>li>div:nth-of-type(2)>div>span {
 		font-size: 1.4rem;
+		line-height: 28px;
 		margin-top: 9px;
 	}
-	.side_contents>ul>li>div:nth-of-type(2)>button {
+	.side_contents>ul>li>div:nth-of-type(2)>div>button {
 		float: right;
 		width: 63px;
 		height: 28px;
-		margin-top: 9px;
 		border: 1px solid rgba(0,0,0,0.4);
 		border-radius: 5px;
+		cursor: pointer;
 	}
 }
