--- a/public/styles/review.css
+++ b/public/styles/review.css
@@ -22,9 +22,9 @@ main{
 	display: flex;
 	position: relative;
 	width: 80%;
-	height: 260px;
 	margin: auto;
 	margin-top: -40px;
+	margin-bottom: 75px;
 }
 .corp_info_image {
 	float: left;
@@ -40,15 +40,13 @@ main{
 	flex-direction: column;
 	gap: 16px;
 	width: 67.5%;
-	height: 121px;
 	margin: 0 auto;
 	margin-top: 60px;
 	margin-left: 12px;
 }
 .corp_info_data div:nth-child(1) {
 	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
+	flex-direction: column;
 	gap: 16px;
 }
 .corp_info_data>div>span:nth-child(1) {
@@ -87,14 +85,13 @@ main{
 	align-items: center;
 	gap: 12px;
 	width: 100%;
-	height: 44px;
 }
 .btn_review {
 	width: 160px;
 	height: 48px;
 	position: absolute;
 	right: 0;
-	bottom: 0;
+	bottom: -75px;
 	background-color: #3d47FF;
 	border-radius: 8px;
 	font-size: 1.4rem;
@@ -409,6 +406,7 @@ main{
 @media screen and (min-width: 768px) {
 	.corp_info {
 		width: 86%;
+		margin-bottom: 100px;
 	}
 	.corp_info_image {
 		width: 120px;
@@ -433,6 +431,7 @@ main{
 	.btn_review {
 		width: 240px;
 		height: 60px;
+		bottom: -100px;
 		font-size: 1.6rem;
 		line-height: 60px;
 	}
@@ -517,8 +516,11 @@ main{
 
 /* PC 1024 사이즈 반응형 */
 @media screen and (min-width: 1024px) {
+	.corp_info {
+		margin-bottom: 100px;
+	}
 	.btn_review {
-		bottom: 128px;
+		bottom: 20px;
 	}
 	.contents_review {
 		gap: 76px;
@@ -551,10 +553,6 @@ main{
 	.contents_wrap {
 		width: 67%;
 	}
-	.contents_main {
-		float: left;
-		width: 68.36%;
-	}
 	.total_score_corpname {
 		font-size: 2.8rem;
 	}
@@ -572,7 +570,7 @@ main{
 		font-size: 2.0rem;
 	}
 	.total_detail_star span:nth-of-type(3) {
-		width: 95px;
+		width: 120px;
 		font-size: 2.0rem;
 	}
 	.total_score_detail>li:nth-of-type(2)>span:nth-of-type(3){
@@ -589,6 +587,13 @@ main{
 	}
 	.pros_cons>p:nth-of-type(1) {
 		font-size: 2.0rem;
+	}
+}
+/* PC 1920 사이드바 추가 반응형 */
+@media screen and (min-width: 1920px){
+	.contents_main {
+		float: left;
+		width: 68.36%;
 	}
 	.sidebar {
 		display: block;
