--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -27,11 +27,11 @@ header{
   height: 28px;;
   line-height:1.6;
 }
-h1{
+header>h1{
   width:105px;
   height:28px;
 }
-h1>a{
+header>h1>a{
   display:block;
   width:100%;
   height:100%;
