--- a/public/styles/search_review.css
+++ b/public/styles/search_review.css
@@ -144,6 +144,7 @@
   border-radius: 50px;
 }
 .top-score-item>div:nth-child(2){
+  min-width: 165px;
   height: 100%;
   position: relative;
 }
@@ -182,7 +183,7 @@
   font-size: 2.8rem;
   font-weight: 700;
 }
-.top1{
+.top-score-contents>div:nth-child(1){
   background: #a0a6ff !important;
 }
 .top-score-banner{
@@ -234,6 +235,11 @@
   display: flex;
   flex-direction: row;
   overflow: scroll;
+  width: 100%;
+}
+/* 스크롤바 없애기 */
+.details::-webkit-scrollbar {
+  display: none;
 }
 .details>li{
   display: inline-block;
