--- a/public/styles/style_mobile.css
+++ b/public/styles/style_mobile.css
@@ -36,7 +36,7 @@ header{
 h1{
   display:block;
   width:30%;
-  max-width:120px;
+  max-width:100px;
   height:80px;
   line-height:80px;
   font-size:2.4rem;
@@ -127,19 +127,19 @@ main{
   text-align:center;
 }
 .visual p:nth-of-type(1){
-  font-size:1.4rem;
+  font-size: calc(1.2rem + 1vw);
 }
 .visual p:nth-of-type(2){
   margin-top:4px;
   display:inline-block;
-  font-size:1.6rem;
+  font-size:calc(1.4rem + 1vw);
 }
 .visual p:nth-of-type(2) span{
   display:inline-block;
   font-family: 'NanumSquareExtraBold';
 }
 .visual p:last-of-type{
-  font-size: 2.8rem;
+  font-size: calc(2.8rem + 1vw);
   margin: 20px 0 48px;
 }
 .visual p:last-of-type span{
@@ -168,7 +168,7 @@ main{
   background:none;
   border:none;
   color:#fff;
-  font-size:1.4rem;
+  font-size:calc(1.2rem + 0.5vw);
 }
 .search_main_wrap input::placeholder{
   color:rgba(255,255,255,0.6);
@@ -181,9 +181,8 @@ main{
 .visual>span:last-child{
   display:block;
   margin-top:20px;
-  margin-left:40px;
-  font-size:1.4rem;
-  text-align:left;
+  font-size:calc(1.2rem + 0.5vw);
+  text-align:center;
 
 }
 .visual>span:last-child a{
