--- a/public/styles/search_write.css
+++ b/public/styles/search_write.css
@@ -18,6 +18,7 @@
   background: #ffffff;
   border: 2px solid #000;
   border-radius: 40px;
+  margin-bottom: 100px;
 }
 .user_input{
   width: 100%;
@@ -79,102 +80,6 @@
   font-size: 1.4rem;
   font-weight: 700;
 }
-.modal-box{
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.2);
-  z-index: 11;
-}
-.modal_addCorp{
-  position: fixed;
-  width: 80%;
-  height: auto;
-  max-width: 760px;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
-.modal_addCorp>div{
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  height: 30px;
-  background: #3D47FF;
-  border-radius: 5px 5px 0px 0px;
-  font-size: 1.4rem;
-  color: #ffffff;
-}
-.Corp_data{
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  gap: 20px;
-  background: #ffffff;
-  font-size: 1.2rem;
-}
-.Corp_data>div{
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-}
-.Corp_data>div>label{
-  font-weight: 700;
-}
-.Corp_data>div>input{
-  width: 70%;
-  height: 30px;
-  padding: 5px 10px;
-  border: 1px solid #aaaaaa;
-  border-radius: 5px;
-}
-.Corp_data>div>input::placeholder{
-  color: #aaaaaa;
-}
-.Corp_data>div>div{
-  width: 70%;
-  height: 30px;
-  display: flex;
-  justify-content: space-between;
-}
-.Corp_data>div>div>select{
-  width: 45%;
-  padding: 5px 10px;
-  border: 1px solid #aaaaaa;
-  border-radius: 5px;
-  font-size: 1.0rem;
-  appearance: none;
-  background: url(images/btn_select.png) no-repeat right 12px center;
-  background-size: 12px 9px;
-}
-.btn_modalSubmit{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 20px;
-  background: #eeeeee;
-  border-radius: 0px 0px 5px 5px;
-}
-.modal_cancel{
-  width: 30%;
-  max-width: 180px;
-  height: 30px;
-  background: #ffffff;
-  border-radius: 5px;
-  font-size: 1.2rem;
-}
-.modal_submit{
-  width: 30%;
-  max-width: 180px;
-  height: 30px;
-  background: #000dff;
-  border-radius: 5px;
-  color: #ffffff;
-  font-size: 1.2rem;
-}
 /* mobile-end */
 
 @media screen and (min-width:768px) {
@@ -211,43 +116,7 @@
   .register>span:nth-of-type(2){
     font-size: 1.8rem;
   }
-  .modal_addCorp>div{
-    height: 68px;
-    font-size: 2.0rem;
-  }
-  .Corp_data{
-    padding: 40px;
-    gap: 40px;
-    font-size: 1.8rem;
-  }
-  .Corp_data>div>input{
-    max-width: 468px;
-    height: 54px;
-    padding: 17px 20px;
-    font-size: 1.8rem;
-  }
-  .Corp_data>div>div{
-    max-width: 468px;
-    height: 54px;
-  }
-  .Corp_data>div>div>select{
-    width: 45%;
-    padding: 17px 20px;
-    font-size: 1.8rem;
-  }
-  .btn_modalSubmit{
-    padding: 20px 28px;
-    height: 94px;
-  }
-  .modal_cancel{
-    height: 54px;
-    font-size: 1.8rem;
-  }
-  .modal_submit{
-    height: 54px;
-    font-size: 1.8rem;
 
-  }
 }
 /* 768 end */
 /* 1024 */
